[package]
name = "localisationtechniques"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rppal = { version = "0.13.1", features = ["hal"] }
embedded-hal = "0.2.7"
embedded-timeout-macros = "0.3.0"
dw3000 = "0.2.0" 
chrono = "0.4"

bluer = "0.13.1"
futures = "0.3.21"
futures-core = "0.3.19"
tokio = { version = "1", features = ["full"] }
uuid = "0.8"
env_logger = "0.9"
rand = "0.8"
nb = "1.0.0"
void = "1.0.2"
